added basic audio based player targetting